# rustdesk

./: .gitattributes  .gitignore  .gitmodules  2026-06-04_project_knowledge_base.md  2026-06-04_project_status.md  2026-06-04_work_report.md  2026-06-05_project_knowledge_base.md  2026-06-05_project_status.md  2026-06-05_work_report.md  2026-06-06_project_status.md  2026-06-06_work_report.md  AGENTS.md  ANDROID_BUILD_GUIDE.md  API_SERVER_DOCS.md  AUTOSTART_APK_QUICKSTART.md  BUILDING.md  BUILD_ERROR_FIX_COMPLETE.md  BUILD_INSTRUCTIONS.md  BUILD_REFERENCE.md  BUILD_SETUP_FIX.md  Backup-RustDesk-Keys.ps1  Build-RustDesk-Installer.ps1  CHANGE_VISUALIZATION.md  CLAUDE.md  CLEANUP_REMOTE_SERVER.ps1  CLIENT_PACKAGING_GUIDE.md  CODE_OF_CONDUCT.md  COMPLETE_WINDOWS_BUILD_FIX.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bk  Check-RustDeskConfig-Detailed.ps1  Check-RustDeskConfig.ps1  Check-RustDeskKey.bat  Como Fazer Build na PowerShell.txt  Cross.toml  DAI.md  DELIVERY_SUMMARY.txt  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  (+199 more)
examples/custom_plugin/: Cargo.toml
examples/custom_plugin/src/: lib.rs
libs/clipboard/: Cargo.toml  README.md  build.rs
libs/clipboard/src/: cliprdr.h  cliprdr.rs  context_send.rs  lib.rs
libs/clipboard/src/OSX/: Clipboard.m
libs/clipboard/src/platform/: fuse.rs  mod.rs  windows.rs
libs/clipboard/src/windows/: wf_cliprdr.c
libs/confy/: .gitignore  Cargo.toml  LICENSE  README.md
libs/confy/examples/: simple.rs
libs/confy/src/: lib.rs  utils.rs
libs/enigo/: .gitignore  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  rustfmt.toml
libs/enigo/.github/ISSUE_TEMPLATE/: feature_request.md
libs/enigo/examples/: key.rs  keyboard.rs  mouse.rs  timer.rs
libs/enigo/src/: dsl.rs  lib.rs  linux.rs
libs/enigo/src/linux/: mod.rs  nix_impl.rs  pynput.rs  xdo.rs
libs/enigo/src/macos/: keycodes.rs  macos_impl.rs  mod.rs
libs/enigo/src/win/: keycodes.rs  mod.rs  win_impl.rs
libs/flutter_rust_bridge_codegen/: Cargo.toml  README.md
libs/flutter_rust_bridge_codegen/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  markers.rs  others.rs  source_graph.rs  transformer.rs  utils.rs
libs/hbb_common/: .gitignore  Cargo.toml  build.rs
libs/hbb_common/examples/: config.rs  system_message.rs  webrtc.rs
libs/hbb_common/protos/: base_proto.proto  discovery.proto  message.proto  rendezvous.proto
libs/hbb_common/src/: bytes_codec.rs  compress.rs  config.rs  config.rs_bak  config.rs_bak_  fingerprint.rs  fs.rs  lib.rs  mem.rs  password_security.rs  proxy.rs  socket_client.rs  stream.rs  tcp.rs  tls.rs  udp.rs  verifier.rs  webrtc.rs  websocket.rs
libs/hbb_common/src/platform/: linux.rs  (+3 more)
libs/hwcodec_patched/: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
libs/hwcodec_patched/examples/: align.rs  available.rs  benchmark.rs  codec.rs  pipeline_vram.rs  resolution.rs
libs/hwcodec_patched/src/: android.rs  common.rs  ffmpeg.rs  lib.rs  mux.rs
libs/local_recorder/: Cargo.toml
libs/local_recorder/src/: activity.rs  capture.rs  lib.rs  service.rs  storage.rs  writer.rs
libs/local_recorder/tests/: activity_tests.rs  capture_tests.rs  config_tests.rs  service_tests.rs  writer_tests.rs
libs/magnum-opus/: Cargo.toml  LICENSE-MIT  README.md  build.rs  opus_ffi.h
libs/magnum-opus/src/: lib.rs  opus_ffi.rs
libs/magnum-opus/tests/: fec.rs  opus-padding.rs  tests.rs
libs/parity-tokio-ipc/: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
libs/parity-tokio-ipc/examples/: client.rs  server.rs  spam-clients.sh
libs/parity-tokio-ipc/src/: lib.rs  unix.rs  win.rs
libs/portable/: Cargo.toml  app_metadata.toml  build.rs  generate.py  icon.rc
libs/portable/src/: bin_reader.rs  main.rs  ui.rs
libs/pulsectl/: .gitignore  Cargo.toml  LICENSE.md  README.md
libs/pulsectl/examples/: change_device_vol.rs
libs/pulsectl/src/: errors.rs  lib.rs
libs/remote_printer/: Cargo.toml
libs/remote_printer/src/: lib.rs  printer_job.rs
libs/rust-sciter/: .appveyor.yml  .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
libs/rust-sciter/examples/: archived.rc  archived.rs  clock.htm  clock.rs  dom.rs  download.rs  extension.htm  fire_event.htm  fire_event.rs  first.rs  interop.htm  interop.rs  minimal.htm  minimal.rs  som.htm  som.rs  threads.htm  threads.rs  video.htm  video.rs  windowless.rs
libs/rust-sciter/serde/: Cargo.toml
libs/rust-sciter/src/: dom.rs  eventhandler.rs  graphics.rs  host.rs  lib.rs  macros.rs  om.rs  platform.rs  request.rs  types.rs  utf.rs  value.rs  video.rs  window.rs  windowless.rs
libs/rust-sciter/tests/: graphics.rs  value.rs
libs/scrap/: .gitignore  Cargo.toml  README.md  build.rs  vpx_ffi.h
libs/scrap/benches/: codec_decode.rs  codec_encode.rs  convert.rs  mutex_contention.rs  pipeline_decode.rs  pipeline_encode.rs  protobuf.rs  video_queue.rs  yuv_to_rgb.rs
libs/scrap/examples/: benchmark.rs  capture_mag.rs  ffplay.rs  record-screen.rs  screenshot.rs
libs/scrap/src/: lib.rs  wayland.rs
libs/systray-rs/: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  appveyor.yml
libs/systray-rs/ci/: before_install.sh
libs/systray-rs/examples/: systray-example.rs
libs/systray-rs/src/: lib.rs
libs/virtual_display/dylib/: Cargo.toml  README.md  build.rs
res/vcpkg/oboe-wrapper/: CMakeLists.txt  oboe.cc  portfile.cmake  vcpkg.json
scr_tauri/libs/portable/: Cargo.toml  requirements.txt
src_tauri/libs/simple_rc/: Cargo.toml  simple_rc.toml
tools/android_uiautomator2/: .gitignore  README.md  pyproject.toml  u2_story10.xml  u2_story10_fail.xml  u2_story10_fail2.xml  u2_story10_fail3.xml  u2_story10_fail4.xml  u2_story10_fail5.xml
tools/android_uiautomator2/scripts/: start_emulator.ps1  start_u2.ps1  u2_fix.ps1  wsl_u2.sh
vdi/host/: Cargo.toml  README.md
vdi/host/.cargo/: config.toml
vdi/host/.devcontainer/: Dockerfile  devcontainer.json
vdi/host/src/: connection.rs  console.rs  lib.rs  main.rs  server.rs
voice-calling-standalone/: Cargo.toml
voice-calling-standalone/src/: main.rs
(+1957 files in other folders)
