[package]
name = "custom_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "custom_plugin"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
rustdesk = { path = "../../", version = "1.2.0"}

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
#opt-level = 'z' # only have smaller size after strip
rpath = true