[package]
name = "flutter_rust_bridge_codegen"
version = "1.32.0"
edition = "2018"
description = "High-level memory-safe bindgen for Dart/Flutter <-> Rust"
license = "MIT"
repository = "https://github.com/fzyzcjy/flutter_rust_bridge"
keywords = ["flutter", "dart", "ffi", "code-generation", "bindings"]
categories = ["development-tools::ffi"]

[lib]
name = "lib_flutter_rust_bridge_codegen"
path = "src/lib.rs"

[[bin]]
name = "flutter_rust_bridge_codegen"
path = "src/main.rs"

[dependencies]
syn = { version = "1.0.77", features = ["full", "extra-traits"] }
quote = "1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
convert_case = "0.5.0"
tempfile = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.9.0"
structopt = "0.3"
toml = "0.5.8"
anyhow = "1.0.44"
pathdiff = "0.2.1"
cargo_metadata = "0.14.1"
enum_dispatch = "0.3.8"
thiserror = "1"
cbindgen = "0.23"