[package]
name = "hwcodec"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vram = []

[dependencies]
log = "0.4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
cc = "1.0"
bindgen = "0.59"

[dev-dependencies]
env_logger = "0.10"
rand = "0.8"

[target.'cfg(target_os="windows")'.dev-dependencies]
capture = { path = "dev/capture" }
render = { path = "dev/render" }
tool = { path = "dev/tool" }
