[package]
name = "local_recorder"
version = "0.1.0"
edition = "2021"

[features]
default = []
capture = ["scrap"]

[dependencies]
anyhow = "1"
hbb_common = { path = "../hbb_common" }
scrap = { path = "../scrap", optional = true }
uuid = { version = "1.3", features = ["v4"] }
webm = { git = "https://github.com/rustdesk-org/rust-webm" }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
